<resources>
    <string name="app_name">巨思八字</string>


    <string name="error_net">当前网络不可用，请检查您的网络设置</string>
    <string name="error_net_toast">网络不给力</string>
    <string name="determine">确定</string>
    <string name="determine2">确认</string>
    <string name="cancel">取消</string>
    <string name="empty_error_net_server">数据加载失败，请返回重试!</string>

    <!--<string name="main_tab_homepage">首页 01</string>-->
    <string name="main_tab_homepage">分析</string>
    <string name="main_tab_yidi">报销查询</string>
    <!--<string name="main_tab_drug_search">药品查询 02</string>-->
    <string name="main_tab_drug_search">首页</string>
    <!--<string name="main_tab_recomment">资讯03</string>-->
    <string name="main_tab_recomment">知识</string>
    <!--<string name="main_tab_mine">我的04</string>-->
    <string name="main_tab_mine">我的</string>
    <string name="main_tab_biyao">比药</string>


    <!-- 通用的 -->
    <string name="common_phone_input_hint">输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>

    <string name="common_password_input_error">请输入密码</string>

    <string name="common_code_input_hint">输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>

    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>

    <string name="common_permission_hint">请先授予权限</string>
    <string name="common_permission_fail">授权失败，请手动授予权限</string>

    <string name="common_loading">加载中&#8230;</string>

    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>

    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>

    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>


    <!-- 提示 -->
    <string name="hint_layout_no_data">亲，暂无数据</string>
    <string name="hint_layout_error_request">亲，请求出错了</string>
    <string name="hint_layout_error_network">亲，没有网络了</string>

    <!-- 主页 -->
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_found">发现</string>
    <string name="home_nav_message">消息</string>
    <string name="home_nav_me">我的</string>

    <!-- 登录 -->
    <string name="login_register">注册</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>

    <string name="login_other">其他登录方式</string>

    <string name="permissions_check_warn">警告！</string>
    <string name="permissions_check_ok">确定</string>
    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_login">登录</string>
    <string name="register_password_hint1">设置6&#8211;18位登录密码</string>
    <string name="register_password_hint2">请再次输入一次密码</string>
    <string name="register_password_input_error">两次密码输入不一致，请重新输入</string>

    <!-- 设置 -->
    <string name="setting_title">设置</string>

    <string name="setting_language">语言切换</string>
    <string name="setting_language_simple">简体中文</string>
    <string name="setting_language_complex">繁体中文</string>

    <string name="setting_update">检查更新</string>
    <string name="setting_cache">清空缓存</string>
    <string name="setting_auto">自动登录</string>
    <string name="setting_agreement">隐私协议</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_exit">退出登录</string>

    <!-- 关于 -->
    <string name="about_title">关于我们</string>
    <string name="about_author"><font color="#85b84f">Android</font> 轮子哥</string>

    <string name="about_copyright">Copyright © 2018 &#8211; 2019</string>

    <!-- 忘记密码 -->
    <string name="password_forget_title">忘记密码</string>

    <!-- 重置密码 -->
    <string name="password_reset_title">设置登录密码</string>
    <string name="password_reset_phone_hint1">设置6&#8211;18位登录密码</string>
    <string name="password_reset_phone_hint2">重新输入一次密码</string>
    <string name="password_reset_input_error">两次密码输入不一致，请重新输入</string>
    <string name="password_reset_success">密码重置成功</string>

    <!-- 校验手机号 -->
    <string name="phone_verify_title">手机号验证</string>
    <string name="phone_verify_current_phone">当前手机号：%s</string>

    <!-- 修改手机号 -->
    <string name="phone_reset_title">修改手机号</string>
    <string name="phone_reset_change_hint">下次登录请使用更换后的新手机号登录</string>
    <string name="phone_reset_commit">立即绑定</string>

    <string name="phone_reset_commit_succeed">绑定成功，下次登录请使用新手机号登录</string>

    <!-- 个人资料 -->
    <string name="personal_data_title">个人资料</string>
    <string name="personal_data_head">头像</string>

    <string name="personal_data_id">用户ID</string>
    <string name="personal_data_name">昵称</string>
    <string name="personal_data_name_hint">设置昵称</string>

    <string name="personal_data_address">地区</string>
    <string name="personal_data_address_hint">请选择</string>

    <string name="personal_data_phone">手机号码</string>
    <string name="personal_data_phone_hint">立即绑定</string>

    <!-- 浏览器 -->
    <string name="web_title">网页加载中&#8230;</string>

    <!-- 异常捕捉 -->
    <string name="crash_error_hint">发生意外错误\n抱歉，给您带来不便</string>

    <string name="crash_error_restart">重新启动</string>
    <string name="crash_error_log">错误日志</string>

    <string name="crash_error_details">错误详情</string>
    <string name="crash_error_info">错误信息</string>
    <string name="crash_copy_log">复制日志</string>
    <string name="crash_close">关闭</string>

    <!-- 图片选择 -->
    <string name="photo_title">图片选择</string>
    <string name="photo_all">所有图片</string>

    <string name="photo_total">共 %d 张</string>

    <string name="photo_max_hint">本次最多只能选择 %d 张图片</string>

    <string name="photo_launch_fail">无法启动相机</string>
    <string name="photo_picture_error">图片错误</string>

    <string-array name="npv_lunar_year_without_measure_hint">
        <item>二零一六</item>
    </string-array>
    <string-array name="npv_lunar_month_without_measure_hint">
        <item>十一</item>
    </string-array>
    <string-array name="npv_lunar_day_with_measure_hint">
        <item>初一</item>
    </string-array>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>


    <string name="get_data">显示获取时间</string>
    <string name="in_dialog">以Dialog显示</string>
    <string name="hour">时</string>
    <string name="min">分</string>

    <string-array name="indicator_string_array">
        <item>公历</item>
        <item>农历</item>
    </string-array>


    <string name="title_activity_style_classics">ClassicsHeader</string>


</resources>
