<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.company.forturetelling.view.calendar.NumberPickerView
        android:id="@+id/pickerYear"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:contentDescription="year_picker"
        android:paddingRight="5dp"
        app:npv_AlternativeTextArrayWithoutMeasureHint="@array/npv_lunar_year_without_measure_hint"
        app:npv_HintText="@string/year"
        app:npv_RespondChangeOnDetached="false"
        app:npv_TextSizeHint="12dp" />

    <com.company.forturetelling.view.calendar.NumberPickerView
        android:id="@+id/pickerMonth"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_weight="1"
        android:contentDescription="month_picker"
        android:paddingRight="5dp"
        app:npv_AlternativeTextArrayWithoutMeasureHint="@array/npv_lunar_month_without_measure_hint"
        app:npv_HintText="@string/month"
        app:npv_RespondChangeOnDetached="false"
        app:npv_TextSizeHint="12dp" />

    <com.company.forturetelling.view.calendar.NumberPickerView
        android:id="@+id/pickerDay"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_weight="1"
        android:contentDescription="month_picker"
        android:paddingRight="5dp"
        app:npv_AlternativeTextArrayWithoutMeasureHint="@array/npv_lunar_month_without_measure_hint"
        app:npv_HintText="@string/day"
        app:npv_RespondChangeOnDetached="false"
        app:npv_TextSizeHint="12dp" />

    <com.company.forturetelling.view.calendar.NumberPickerView
        android:id="@+id/pickerHour"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_weight="1"
        android:contentDescription="month_picker"
        android:paddingRight="5dp"
        app:npv_AlternativeTextArrayWithoutMeasureHint="@array/npv_lunar_month_without_measure_hint"
        app:npv_HintText="@string/hour"
        app:npv_RespondChangeOnDetached="false"
        app:npv_TextSizeHint="12dp" />

    <com.company.forturetelling.view.calendar.NumberPickerView
        android:id="@+id/pickerMin"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="day_picker"
        android:paddingRight="5dp"
        app:npv_AlternativeTextArrayWithMeasureHint="@array/npv_lunar_day_with_measure_hint"
        app:npv_AlternativeTextArrayWithoutMeasureHint="@array/npv_lunar_day_with_measure_hint"
        app:npv_HintText="@string/min"
        app:npv_RespondChangeOnDetached="false"
        app:npv_TextSizeHint="12dp" />

</merge>